@@ -278,6 +278,111 @@ sweep-mode=.  To instruct Emacs to always open Prolog files in
   (add-to-list 'auto-mode-alist '("\\.plt\\'"  . sweep-mode))
 #+end_src
 
+** Indentation
+:PROPERTIES:
+:CUSTOM_ID: indentation
+:END:
+
+#+CINDEX: indentation
+
+In =sweep-mode= buffers, the appropriate indentation for each line is
+determined by a bespoke /indentation engine/.  The indentation engine
+analyses the syntactic context of a given line and determines the
+appropriate indentation to apply based on a set of rules.
+
+#+FINDEX: sweep-indent-line
+The entry point of the indentation engine is the function
+=sweep-indent-line= which takes no arguments and indents that line at
+point.  =sweep-mode= supports the standard Emacs interface for
+indentation by arranging for =sweep-indent-line= to be called whenever a
+line should be indented, notably after pressing =TAB=.  For more a full
+description of the available commands and options that pertain to
+indentation, see [[info:emacs#Indentation][Indentation in the Emacs manual]].
+
+*** Indentation rules
+:PROPERTIES:
+:CUSTOM_ID: indentation-rules
+:END:
+
+Lines in =sweep-mode= buffers are indented according to the following
+rules:
+
+1. If the current line starts inside a string or a multi-line comment,
+   do not indent.
+2. If the current line starts with a top term, do not indent.
+3. If the current line starts with a closing parenthesis and the
+   matching opening parenthesis is part of a functor, indent to the
+   column of the opening parenthesis if any arguments appear on the
+   same line as the functor, otherwise indent to the start of the
+   functor.
+
+   This rule yields the following layouts:
+
+   #+begin_src prolog
+     some_functor(
+         some_arg
+     ).
+
+     some_functor( some_arg
+                 ).
+   #+end_src
+
+#+VINDEX: sweep-indent-offset
+4. If the current line is the first non-comment line of a clause body,
+   indent to the starting column of the head term plus the value of
+   the user option =sweep-indent-offset= (by default, four extra
+   columns).
+
+   As an example, this rule yields the following layouts when
+   =sweep-indent-offset= is set to the default value of four columns:
+
+   #+begin_src prolog
+     some_functor(arg1, arg2) :-
+         body_term.
+
+     asserta( some_functor(arg1, arg2) :-
+                  body_term
+            ).
+   #+end_src
+
+5. If the current line starts with the right hand side operand of an
+   infix operator, indent to the starting column of the first operand
+   in the chain of infix operators of the same precedence.
+
+   This rule yields the following layouts:
+
+   #+begin_src prolog
+     head :- body1, body2, body3,
+             body4, body5.
+
+     A is 1 * 2 ^ 3 * 4 *
+          5.
+
+     A is 1 * 2 + 3 * 4 *
+                  5.
+   #+end_src
+
+6. If the last non-comment line ends with a functor and its opening
+   parenthesis, indent to the starting column of the functor plus
+   =sweep-indent-offset=.
+
+   This rule yields the following layout:
+
+   #+begin_src prolog
+     some_functor(
+         arg1, ...
+   #+end_src
+
+7. If the last non-comment line ends with a prefix operator, indent to
+   starting column of the operator plus =sweep-indent-offset=.
+
+   This rule yields the following layout:
+
+   #+begin_src prolog
+     :- multifile
+            predicate/3.
+   #+end_src
+
 ** Semantic highlighting
 :PROPERTIES:
 :CUSTOM_ID: semantic-highlighting
